removing important of z-index when header is fixed

--- a/assets/css/styles-4.css
+++ b/assets/css/styles-4.css
@@ -830,7 +830,7 @@ pre code {
 }
 
 .header.navbar-fixed-top {
-  z-index: 999999!important;
+  z-index: 999999;
 }
 
 #components * {
